# random-real

./: .travis.yml  CHANGELOG.md  README.md  audio.txt  euterpea-sandbox.cabal  random-real.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: EuterpeaSandbox.hs  RandomReal.hs
