cabal-version:       2.4
name:                random-real
version:             0.0.0.0
synopsis:            See README for more info
description:
    Randomizer based on audio data comsumed from microphone
homepage:            https://github.com/willgame/random-real
bug-reports:         https://github.com/willgame/random-real/issues
license:             Unlicense
license-file:        UNLICENSE
author:              Vladislav Sabanov
copyright:           2021 Vladislav Sabanov
category:            Random
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/willgame/random-real.git

common common-options
  build-depends:       base >= 4 && < 5

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DuplicateRecordFields
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     RandomReal
  build-depends:
                    --    Euterpea
                    --  , vivid
                       bytestring
                     , HCodecs
                     , array
                     , random
                     , process
                     , uuid
                     , stm
                     , text
                     , async
                     , directory
                     , extra

executable random-real
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       random-real
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
